axum-macros/tests/debug_handler/fail/extract_self_mut.stderr
error: Handlers must only take owned values
  --> tests/debug_handler/fail/extract_self_mut.rs:20:22
   |
20 |     async fn handler(&mut self) {}
   |                      ^^^^^^^^^
